--- a/2.html
+++ b/2.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - </title>
+  <title>WEB1 - CSS</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a hef="index.html">WEB</h1>
+  <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
